[package]
name = "ta-bot"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = "0.4.42"
rand = "0.9.2"
rand_chacha = "0.9.0"
sha2 = "0.10.9"
shuttle-runtime = "0.57.0"
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
